--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,13 +12,13 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix: # Support latest and one minor back
-        go: ["1.17", "1.18", "1.19"]
+        go: ["1.22", "1.23"]
     env:
       GOFLAGS: -mod=readonly
 
     services:
       etcd:
-        image: gcr.io/etcd-development/etcd:v3.5.0
+        image: gcr.io/etcd-development/etcd:v3.5.16
         ports:
           - 2379
         env:
@@ -27,12 +27,12 @@ jobs:
         options: --health-cmd "ETCDCTL_API=3 etcdctl --endpoints http://localhost:2379 endpoint health" --health-interval 10s --health-timeout 5s --health-retries 5
 
       consul:
-        image: consul:1.10
+        image: hashicorp/consul:1.19
         ports:
           - 8500
 
       zk:
-        image: zookeeper:3.5
+        image: zookeeper:3.8
         ports:
           - 2181
 
@@ -45,13 +45,13 @@ jobs:
 
     steps:
       - name: Set up Go
-        uses: actions/setup-go@v2.1.3
+        uses: actions/setup-go@v5
         with:
           stable: "false"
           go-version: ${{ matrix.go }}
 
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
       - name: Run tests
         env:
@@ -62,7 +62,7 @@ jobs:
         run: go test -v -race -coverprofile=coverage.coverprofile -covermode=atomic -tags integration ./...
 
       - name: Upload coverage
-        uses: codecov/codecov-action@v1
+        uses: codecov/codecov-action@v4
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
           file: coverage.coverprofile
